fix : container & overflow

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 /* Main table */
 #main-table{
     width: 100%;
-    height: calc(100% - 50px);
+    height: calc(100vh - 50px);
     overflow: auto;
 }
 
